--- a/src/main/java/javaPractice/shejimoshi/设计模式.md
+++ b/src/main/java/javaPractice/shejimoshi/设计模式.md
@@ -1,2 +1,15 @@
 1、singleton： 单例模式
 2、 strategy： 策略模式
+
+##创建型模式：
+###1、FactoryMethod: 工厂方法
+####定义一个用于创建对象的接口，让子类决定实例化哪一个类。FactoryMethod使一个类的实例化延迟到其子类。
+个人理解： 就是相当于在不同的service之间方法的调用。
+
+###2、AbstractFactory: 抽象工厂
+####提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
+个人理解： 没有发现和工厂方法有什么区别。
+
+##结构型模式：
+
+##行为型模式：
